tests/valid-gd-scripts/newlines2.gd
class_name X


func foo():


	pass

	pass
