tests/invalid-gd-scripts/standalone-trailing-comma-in-actual-parameters.gd
func foo():
	pass
func bar():
	foo(,)
